testsuite/tests/properties/invalid_node_builder/spurious_kwarg/test.lkt
from common import BaseExample, FooNode

@synthetic
class EmptyNode: FooNode {
}

class Example: BaseExample {
    @lazy prop: EmptyNode = EmptyNode.builder(foo=null[FooNode]).build()
}
